packages/cashc/test/compiler/ParseError/slice_single_parameter.cash
contract Slice(bytes20 pkh) {
    function spend() {
        bytes actualPkh = tx.inputs[this.activeInputIndex].lockingBytecode.slice(23);
        require(pkh == actualPkh);
    }
}
